# lander

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  PROGRESS.md  README.md  TASKS.md
docs/: CLEANUP.md  PERFORMANCE.md  POSTMORTEM.md  SMOOTH_EDGE_CLIPPING.md  STARS.md  TASKS.md
macos/: Info.plist
scripts/: build_release.sh  build_windows.ps1
src/: camera.cpp  camera.h  clipping.cpp  clipping.h  constants.h  fixed.h  font.h  graphics_buffer.cpp  graphics_buffer.h  landscape.cpp  landscape.h  landscape_renderer.cpp  landscape_renderer.h  lookup_tables.cpp  lookup_tables.h  main.cpp  math3d.cpp  math3d.h  object3d.cpp  object3d.h  object_map.cpp  object_map.h  object_renderer.cpp  object_renderer.h  palette.cpp  palette.h  particles.cpp  particles.h  player.cpp  player.h  polar_coords.cpp  polar_coords.h  projection.cpp  projection.h  scale.cpp  screen.cpp  screen.h  settings.cpp  settings.h  sound.cpp  (+1 more)
test/: test_fixed.cpp  test_graphics_buffer.cpp  test_landscape.cpp  test_lookup_tables.cpp  test_math3d.cpp  test_object3d.cpp  test_object_map.cpp  test_object_renderer.cpp  test_palette.cpp  test_particles.cpp  test_polar_coords.cpp  test_projection.cpp  test_screen.cpp
tools/: generate_icon.cpp
